--- a/ansible_code/webserver02.yml
+++ b/ansible_code/webserver02.yml
@@ -1,6 +1,6 @@
 ---
-
-# 2nd webserver
+---
+# 1st webserver
 - hostname:
     name: webserver02.al.local
     ansible_ssh_host: 10.0.0.15
@@ -20,16 +20,34 @@
    state: latest
    update_cache: yes
    become: yes
+   notify:
+      - start nginx
+
 - name: start nginx
   service:
     name: nginx
     state: started
     become: yes
+- name: Creates directory this project site config directory al.local directory
+  file:
+    path: /etc/nginx/sites-available/al.local 
+    state: directory
+    owner: nginx
+    group: nginx
+    mode: u=rw,g=r,o=r
+
+- name: Creates directory this project site web_www directory al.local directory
+  file:
+    path: /var/www/al.local 
+    state: directory
+    owner: nginx
+    group: nginx
+    mode: u=rw,g=r,o=r
 
 - name: Copy Nginx config file 
   template:
-    src: template/nginx.conf
-    dest: /etc/nginx/conf.d/nginx.conf
+    src: template/al.local.conf
+    dest: /etc/nginx/sites-available/al.local/al.local.conf
     owner: nginx
     group: nginx
     mode: u=rw,g=r,o=r
@@ -42,11 +60,13 @@
 - debug:
     msg: "The Nginx config file or directory exists"
     when: file_details.stat.exists
-    
+
 - name: Copy holding page for Nginx Specific
   template:
     src: template/webserver02.al.local.html
-    dest: /etc/nginx/sites-available/al.local/index.html
+    dest: /var/www/al.local/index.html
     owner: nginx
     group: nginx
-    mode: u=rw,g=r,o=r
+    mode: u=rw,g=r,o=r 
+
+    
