--- a/ansible_code/webserver01.yml
+++ b/ansible_code/webserver01.yml
@@ -45,7 +45,7 @@
 
 - name: Copy Nginx config file 
   template:
-    src: template/al.local.conf
+    src: templates/al.local.conf
     dest: /etc/nginx/sites-available/al.local/al.local.conf
     owner: nginx
     group: nginx
@@ -62,7 +62,7 @@
 
 - name: Copy holding page for Nginx Specific
   template:
-    src: template/webserver01.al.local.html
+    src: templates/webserver01.al.local.html
     dest: /var/www/al.local/index.html
     owner: nginx
     group: nginx
