--- a/ansible_code/loadbalancer.yml
+++ b/ansible_code/loadbalancer.yml
@@ -6,6 +6,7 @@
     ansible_ssh_host: 10.0.0.13
     ansible_ssh_port: 22
     ansible_ssh_user: vagrant
+    ansible_ssh_pass: vagrant
     
 - hosts: all
 
