--- a/ansible_code/site.yml
+++ b/ansible_code/site.yml
@@ -1,1 +1,23 @@
----
+# This playbook deploys the whole application stack in this site.
+
+- name: apply nginx configuration to two webserver nodes
+  hosts: webservers
+  remote_user: vagrant
+  remote_password: vagrant
+  roles:
+    - web
+
+- name: configure and deploy the webservers and application code
+  hosts: loadbalancers
+  remote_user: root
+  remote_password: vagrant
+
+  roles:
+    - loadbalancer
+
+#- name: deploy Postgresql and configure the databases
+#  hosts: dbservers
+#  remote_user: root
+#
+#  roles:
+#    - db
