--- a/ansible_code/webserver01.yml
+++ b/ansible_code/webserver01.yml
@@ -5,7 +5,7 @@
     ansible_ssh_host: 10.0.0.14
     ansible_ssh_port: 22
     ansible_ssh_user: vagrant
-    
+    ansible_ssh_pass: vagrant
 - hosts: all
 
 - vars:
@@ -50,6 +50,9 @@
     owner: nginx
     group: nginx
     mode: u=rw,g=r,o=r
+
+- name: Create symlink
+  file: /etc/nginx/sites-available/al.local dest=/etc/nginx/sites-enabled/al.local state=link
 
 - name: Ansible check file exists example.
   stat:
