--- a/ansible_code/webserver01.yml
+++ b/ansible_code/webserver01.yml
@@ -2,7 +2,7 @@
 # 1st webserver
 - hostname:
     name: webserver01.al.local
-    ansible_ssh_host: 10.0.0.14
+    ansible_ssh_host: 10.0.0.14 my_host_alias=webserver01.al.local
     ansible_ssh_port: 22
     ansible_ssh_user: vagrant
     ansible_ssh_pass: vagrant
