--- a/ansible_code/loadbalancer.yml
+++ b/ansible_code/loadbalancer.yml
@@ -1,14 +1,8 @@
 ---
 
 # 1st Loadbalancer
-- hostname:
-    name: loadbalance01.al.local
-    ansible_ssh_host: 10.0.0.13 my_host_alias=loadbalance01.al.local 
-    ansible_ssh_port: 22
-    ansible_ssh_user: vagrant
-    ansible_ssh_pass: vagrant
 
-#- hosts: all
+- hosts: loadbalancer01.al.local
 
 - vars:
     http_port: 80
