Corrected lb_nginx.conf emitted the http clause and the server name, they conflict with what is no /etc/nginx/nginx.conf, can only appear in either . changing this is easier

--- a/roles/role-al-loadbalancer01/files/lb_nginx.conf
+++ b/roles/role-al-loadbalancer01/files/lb_nginx.conf
@@ -1,17 +1,13 @@
-http {
-
-   upstream al_web_servers  {
-     least_conn;
-     server webserver01.al.local;
-     server webserver02.al.local;
-   }
+upstream backend  {
+  least_conn;
+  server webserver01.al.local:80;
+  server webserver02.al.local:80;
+}
 
 server {
-   listen   80;
-   server_name  al.local www.al.local;
+    listen   80;
    
     location / {
-      proxy_pass  http://al_web_servers;
+      proxy_pass  http://backend;
     }
-  }
 }
