--- a/roles/role-al-loadbalancer01/tasks/main.yml
+++ b/roles/role-al-loadbalancer01/tasks/main.yml
@@ -32,7 +32,8 @@
     path: /etc/nginx/sites-enabled/default
     state: absent
 
-- name: start nginx
-  service:
+- name: restart nginx
+  service: 
     name: nginx
-    state: started
+    state: restarted 
+    enabled: yes
